# OCUtils

./: CMakeLists.txt  build.sh
src/events/: Event.h  EventList.h  EventStore.h  EventUniq.h
src/observer/: Observable.h  Observer.h  observer.cpp
src/threadutils/: ThreadSwapper.h  ThreadSwapperSingle.h
src/utils/: CompilerOptions.h
tests/src/: CMakeLists.txt  main.cpp
tests/src/events/: CMakeLists.txt  EventList_test.cpp  EventStore_test.cpp  EventUniq_test.cpp
tests/src/observer/: CMakeLists.txt  Observable_test.cpp  Observer_test.cpp
tests/src/threadutils/: CMakeLists.txt  ThreadSwapperSingle_test.cpp
